src/bob_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: bobvsworld
  name: bobvsworld
  namespace: bobvsworld
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: bobvsworld
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bobvsworld
    spec:
      containers:
      - image: docker.io/ivanlab/bobvsworld2:latest
        imagePullPolicy: Always
        name: bobvsworld
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
