src/bob_svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bobvsworld
  name: bobvsworld
  namespace: bobvsworld
spec:
  clusterIP: 10.233.60.17
  clusterIPs:
  - 10.233.60.17
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 3333-80
    port: 3333
    protocol: TCP
    targetPort: 80
  selector:
    app: bobvsworld
  sessionAffinity: None
  type: ClusterIP
